# FatDuck

./: .gitignore  Cargo.toml
fatduck-cli/: Cargo.toml
fatduck-core/: Cargo.toml  build.rs
fatduck-core/src/: lib.rs
fatduck-core/src/chess/: mod.rs
fatduck-core/src/chess/uci/: mod.rs
fatduck-core/src/neural/: encoder.rs  loader.rs  mod.rs  network.rs
fatduck-core/src/neural/backends/: mod.rs  onnx.rs
fatduck-core/src/search/: graph.rs  mcts.rs  mod.rs  stats.rs
fatduck-core/src/time/: mod.rs
fatduck-core/src/utils/: mod.rs
