[package]
name = "fatduck-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
shakmaty = { workspace = true }
ort = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
dashmap = "5.4.0"
daggy = "0.8.0"
petgraph = "0.6.3"

[build-dependencies]
prost-build = "0.11.9"
